test/Fail/Issue2788.err
Issue2788.agda:8.1-28: error: [NeedOptionCubical]
Option --cubical[={full,erased,no-glue}] required
when checking the pragma BUILTIN EQUIV Equiv
